테스트 시 표출되는 경고 제거